# agrumes

./: Makefile  README.md  app.py  engine.py  equarissage.py  geometry.py  launcher.py  pattern.py  pyproject.toml  test_speckle_export.py  test_viz.py
app/: equarissage.py  metrics.py  pattern.py
app/connectors/: __init__.py  bordereau_pdf.py  speckle_io.py
connectors/: bordereau_pdf.py  speckle_io.py
tests/: test_algos.py  test_couple.py  test_couple_viz.py  test_speckle.py  test_speckle_export.py  test_viz.py
