[project]
name = "optim-charpente"
version = "0.1.0"
description = "Optimisation d'affectation grumes -> débits pour charpente amateur"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Charpentier amateur" }]
keywords = ["charpente", "bois", "optimisation", "cutting-stock"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "streamlit>=1.30",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "plotly>=5.18",
    "ortools>=9.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
]
speckle = [
    "specklepy>=3.0",
]

[project.scripts]
optim-charpente = "launcher:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["engine", "equarissage", "geometry", "pattern", "metrics", "app", "launcher"]
packages = ["connectors"]

[tool.ruff]
line-length = 100
target-version = "py310"
